--- a/data/assets/Css/Addon-Css/Animate-Loading-Screen.css
+++ b/data/assets/Css/Addon-Css/Animate-Loading-Screen.css
@@ -9,7 +9,7 @@
 }
 
 .lol-loading-screen-container .lol-loading-screen-lol-icon {
-	background: var(--ElainaFly) !important;
+	background: var(--RyaksFly) !important;
 	background-repeat: no-repeat;
 	background-size: contain;
 	width: 475px !important;
