--- a/data/assets/Css/Addon-Css/Static-Loading-Screen.css
+++ b/data/assets/Css/Addon-Css/Static-Loading-Screen.css
@@ -9,7 +9,7 @@
 }
 
 .lol-loading-screen-container .lol-loading-screen-lol-icon {
-	background: var(--ElainaStatic) !important;
+	background: var(--RyaksStatic) !important;
 	background-repeat: no-repeat;
 	background-size: contain;
 	width: 240px !important;
